# Playwright-course-python

./: .gitignore  conftest.py  product_workflow_guide.md  pyproject.toml  readme.md
.github/workflows/: firefox.yml  playwright.yml  regression.yml  smoke.yml
page_objects/: base.py  menu.py
temp/: temp.md
tests/: test_example_01.py  test_example_02.py  test_example_03.py  test_example_04.py  test_example_05.py  test_example_06.py  test_example_07.py  test_example_08.py  test_example_09.py  test_example_10.py  test_example_11.py  test_example_12.py  test_example_13.py  test_example_14.py  test_example_15.py
