# pyproject.toml
[tool.poetry]
name = "test-project-template"
version = "1.0.0"
description = "Template cab be used for creating new test projects as well as base for test automation learning"
authors = ["Oleksii Ostapov <oleksii.ostapov@infopulse.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.43.0"
pytest = "^8.1.1"
pytest-playwright = "^0.4.4"
pytest-xdist = "^3.5.0"
pytest-dotenv = "^0.5.2"
pytestomatio = "^2.5.3"
pytest-json-ctrf = "^0.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--base-url https://coffee-cart.app/"
testpaths = [
    "tests",
]
markers = [
    "smoke: marker for smoke tests",
    "single: marker for tests cannot be executed in parallel",
    "mobile: marker for mobile tests only",
    "quality_gate: marker for tests that should be executed on quality gate",
]
log_cli = true
log_cli_level = "INFO"